--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,2 @@
-CLIENT_ID = "votre_client_id"
-CLIENT_SECRET = "votre_client_secret"
+CLIENT_ID = "39pwtvwuzct52xnesbka8mgtm"
+CLIENT_SECRET = "fjabtgxaUR"
